@@ -4,15 +4,20 @@ import com.tls.edututor.classroom.repository.ClassroomRepository;
 import com.tls.edututor.code.repository.CodeDetailRepository;
 import com.tls.edututor.course.course.dto.request.CourseRegisterRequest;
 import com.tls.edututor.course.course.dto.response.CourseNameListResponse;
+import com.tls.edututor.course.course.dto.response.CourseResponse;
 import com.tls.edututor.course.course.entity.Course;
 import com.tls.edututor.course.course.repository.CourseRepository;
 import com.tls.edututor.course.course.service.CourseService;
+import com.tls.edututor.course.material.dto.response.MaterialResponse;
 import com.tls.edututor.course.section.dto.request.SectionRegisterRequest;
+import com.tls.edututor.course.section.dto.response.SectionResponse;
 import com.tls.edututor.course.section.entity.Section;
 import com.tls.edututor.course.section.repository.SectionRepository;
 import com.tls.edututor.course.unit.dto.request.UnitRegisterRequest;
+import com.tls.edututor.course.unit.dto.response.UnitResponse;
 import com.tls.edututor.course.unit.entity.Unit;
 import com.tls.edututor.course.unit.repository.UnitRepository;
+import com.tls.edututor.exam.testpaper.dto.response.TestPaperResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -36,9 +41,10 @@ public class CourseServiceImpl implements CourseService {
 	@Transactional
 	public Course createCourseWithSectionsAndUnits(CourseRegisterRequest request) {
 
-		Course course = new Course();
-		course.setWriter(request.getWriter());
-		Course savedCourse = courseRepository.save(course);
+    Course course = new Course();
+    course.setCourseName(request.getCourseName());
+    course.setWriter(request.getWriter());
+    Course savedCourse = courseRepository.save(course);
 
 		for (SectionRegisterRequest sectionRegister : request.getSections()) {
 			Section section = new Section();
@@ -59,26 +65,65 @@ public class CourseServiceImpl implements CourseService {
 		return savedCourse;
 	}
 
-	@Override
-	public List<CourseNameListResponse> selectAllCourseList() {
-		return courseRepository.findAll().stream()
-						.map(course -> new CourseNameListResponse(course.getId(), course.getCourseName()))
-						.collect(Collectors.toList());
-	}
+  @Override
+  public List<CourseNameListResponse> selectAllCourseList() {
+    return courseRepository.findAll().stream()
+            .map(course -> CourseNameListResponse.builder()
+                    .courseId(course.getId())
+                    .courseName(course.getCourseName())
+                    .build())
+            .toList();
+  }
 
-	@Override
-	public List<Map<String, String>> getCourseDetails(String codeId) {
-		List<Object[]> results = courseRepository.findCourseDetailsByCodeId(codeId);
+  public CourseResponse selectCourseDetails(Long courseId) {
+    Course course = courseRepository.findById(courseId)
+            .orElseThrow(() -> new RuntimeException("해당 과정이 존재하지 않습니다."));
 
-		return results.stream()
-						.map(result -> {
-							Map<String, String> map = new HashMap<>();
-							map.put("codeDetailValue", result[0].toString());
-							map.put("id", result[1].toString());
-							return map;
-						})
-						.collect(Collectors.toList());
-	}
+    List<SectionResponse> sections = course.getSections().stream()
+            .map(section -> SectionResponse.builder()
+                    .sectionId(section.getId())
+                    .content(section.getContent())
+                    .units(section.getUnits().stream()
+                            .map(unit -> UnitResponse.builder()
+                                    .unitId(unit.getId())
+                                    .content(unit.getContent())
+                                    .materials(unit.getMaterials().stream()
+                                            .map(material -> MaterialResponse.builder()
+                                                    .materialId(material.getId())
+                                                    .title(material.getTitle())
+                                                    .content(material.getContent())
+                                                    .build())
+                                            .collect(Collectors.toList()))
+                                    .testPaper(unit.getTestPaper() != null
+                                            ? TestPaperResponse.builder()
+                                            .testPaperId(unit.getTestPaper().getId())
+                                            .title(unit.getTestPaper().getTitle())
+                                            .build()
+                                            : null)
+                                    .build())
+                            .collect(Collectors.toList()))
+                    .build())
+            .collect(Collectors.toList());
 
+    return CourseResponse.builder()
+            .courseId(course.getId())
+            .courseName(course.getCourseName())
+            .sections(sections)
+            .build();
+  }
+
+  @Override
+  public List<Map<String, String>> getCourseDetails(String codeId) {
+    List<Object[]> results = courseRepository.findCourseDetailsByCodeId(codeId);
+
+    return results.stream()
+            .map(result -> {
+              Map<String, String> map = new HashMap<>();
+              map.put("codeDetailValue", result[0].toString());
+              map.put("id", result[1].toString());
+              return map;
+            })
+            .collect(Collectors.toList());
+  }
 
 }
